Fixed issues with spacing, undefined var, and price tag

--- a/src/stylesheets/infocard.sass
+++ b/src/stylesheets/infocard.sass
@@ -5,7 +5,7 @@
     display: flex
     flex-direction: column
     width: 233.52px
-    height: 256.65px
+    height: 320.65px
     text-align: center
     padding: 20px
 
